src/app/board/board/board.component.scss
.board-container {
  position: relative;
  height: 100vh;
  // background-color: #f5f5f5;
  overflow: hidden;
  display: flex;
  flex-direction: row;
  justify-content: start;
  flex-wrap: nowrap;
}

.neutral-zone {
  min-width: 300px;
  background-color: rgba(#f8f9fa, 0.5);
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  .neutral-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 12px;
    margin-bottom: 20px;
    text-align: center;

    h2 {
      margin: 0;
      color: #333;
      font-size: 1.2rem;
      font-weight: 500;
    }
  }

  .focused-user-container {
    flex: 1;
    margin-top: 20px;

    .focused-user-card {
      padding: 12px;
      margin-bottom: 12px;
      border-radius: 8px;
      background-color: #fefefe;
      border: 1px solid #eee;
      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);

      &:last-child {
        margin-bottom: 0;
      }

      .user-avatar {
        height: 250px;
        width: 250px;
        // border-radius: 50%;
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;
        margin: auto;
      }

      h3 {
        margin: 0;
        text-align: center;
      }
    }
  }

  .median-mood-column {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-bottom: 20px;

    .mood-icon-container {
      width: 75px;
      height: 75px;
    }
  }
}

.user-menu-button {
  --mdc-icon-button-state-layer-size: 40px;
  padding: 0;
  border-radius: 50%;
  background-color: transparent;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

.user-menu-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 10px;

  .user-avatar {
    height: 80px;
    width: 80px;
    border-radius: 50%;
    background-size: cover;
    background-position: center;
  }
  h3,
  p {
    margin: 0;
  }
}

.user-menu-divider {
  --mat-menu-divider-top-spacing: 10px;
  --mat-menu-divider-bottom-spacing: 10px;
}

.board-grid {
  flex: 1;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  gap: 5px;
  overflow-y: auto;
  padding: 12px;
}

.mood-column {
  display: flex;
  flex-direction: column;
  background: white;
  border-radius: 12px;
  padding: 12px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
  min-width: 0; // Pour permettre le text-overflow
}

.mood-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  // gap: 12px;
  margin-bottom: 10px;
  text-align: center;

  .mood-icon-container {
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 8px;

    .mood-icon {
      max-width: 100%;
      max-height: 100%;
      object-fit: contain;
    }
  }

  h2 {
    margin: 0;
    color: #333;
    font-size: 1.2rem;
    font-weight: 500;
    overflow: hidden;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;

    .sound-button {
      margin-left: 15px;
      --mdc-icon-button-state-layer-size: 30px;
      padding: 2px;
      border: 1px solid #ccc;
    }
  }
}

.user-list {
  flex: 1;
  min-height: 100px;
  height: fit-content;
  border: 2px dashed #e0e0e0;
  border-radius: 8px;
  padding: 12px;
  background-color: #fafafa;

  .neutral-zone-title {
    margin: 0 0 10px;
    color: #333;
    font-size: 1.2rem;
    font-weight: 500;
    text-align: center;
  }
}

.user-card {
  padding: 6px;
  margin-bottom: 4px;
  cursor: move;
  border-radius: 8px;
  transition: transform 0.2s, box-shadow 0.2s;
  background-color: #fefefe;
  border: 1px solid #eee;

  &:last-child {
    margin-bottom: 0;
  }

  &:not(.cannot-move) {
    &:hover {
      transform: translateY(-2px);
      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
    }
  }

  &.cdk-drag-disabled {
    cursor: not-allowed;
    opacity: 0.7;
  }

  &.cdk-drag-preview {
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
  }

  .user-card-title {
    display: flex;
    flex-direction: row;
    align-items: center;
    column-gap: 12px;

    .user-avatar {
      flex-shrink: 0;
      height: 40px;
      width: 40px;
      border-radius: 50%;
      background-size: cover;
      background-position: center;
    }

    h3 {
      margin: 0;
    }
  }
}

// Styles pour le drag & drop
.cdk-drag-placeholder {
  opacity: 0.3;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.user-list.cdk-drop-list-dragging .user-card:not(.cdk-drag-placeholder) {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

// Style pour la zone de drop active
.cdk-drop-list-dragging {
  border-color: #2196f3;
  background-color: rgba(33, 150, 243, 0.05);
}

